Fixed margins for grids on mobile

--- a/api/public/js/blather/src/pages/css/index.scss
+++ b/api/public/js/blather/src/pages/css/index.scss
@@ -579,7 +579,11 @@ a {
     }
 
     @media only screen and (max-width: 1025px) {
-        padding: 0 15px;
+        .mainContainer {
+            .ui.grid {
+                margin: 0 !important;
+            }
+        }
 
         .ui.header {
             font-size: 16px;
@@ -805,7 +809,13 @@ a {
 /* Search page */
 .searchPage {
     @media only screen and (max-width: 1025px) {
-        padding: 0 15px;
+        .mainContainer {
+            padding-top: 0;
+
+            .ui.grid {
+                margin: 0 !important;
+            }
+        }
     }
 
     .searchMenu {
